--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -169,7 +169,8 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <path>/</path>
+                	<server>mytomcat</server>
+                	<path>/insframe-server-0.0.1</path>
                 </configuration>
             </plugin>
             <plugin>
@@ -186,7 +187,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
-                    <warName>insframe-server-0.0.1</warName>
+                    <warName>${project.artifactId}-${project.version}</warName>
                 </configuration>
             </plugin>
             <plugin>
