--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -201,6 +201,20 @@
                             <goal>sources</goal>
                         </goals>
                     </execution>
+					<execution>
+	                    <phase>package</phase>
+	                    <goals><goal>copy</goal></goals>
+	                    <configuration>
+	                        <artifactItems>
+	                            <artifactItem>
+	                                <groupId>com.github.jsimone</groupId>
+	                                <artifactId>webapp-runner</artifactId>
+	                                <version>7.0.57.1</version>
+	                                <destFileName>webapp-runner.jar</destFileName>
+	                            </artifactItem>
+	                        </artifactItems>
+	                    </configuration>
+                	</execution>
                 </executions>
             </plugin>
             <plugin>
