--- a/Server/src/main/resources/persistence.properties
+++ b/Server/src/main/resources/persistence.properties
@@ -6,6 +6,14 @@ dataSource.password=
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.hbm2ddl.auto=create
 
-mongodb.host=localhost
-mongodb.port=27000
-mongodb.database=insframe-db
+
+mongodb.host=ds063630.mongolab.com
+mongodb.port=63630
+mongodb.database=heroku_app31665401
+mongodb.username=admin
+mongodb.password=inspection-framework
+
+#### LOCAL CONFIGURATION ####
+#mongodb.host=localhost
+#mongodb.port=27000
+#mongodb.database=insframe-db
