--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -38,6 +38,7 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
@@ -161,6 +162,15 @@
         	<artifactId>neo4j-cypher-compiler-2.1</artifactId>
         	<version>2.1.2</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
