--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>inspection-framework-server</groupId>
+  <groupId>inspection-framework</groupId>
   <artifactId>inspection-framework-server-parent</artifactId>
   <version>0.0.1</version>
   <packaging>pom</packaging>
-
   <modules>
     <module>Server</module>
+    <module>Client</module>
   </modules>
 </project>
