--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -198,6 +198,7 @@
                 <version>2.1.1</version>
                 <configuration>
                     <warName>${project.artifactId}-${project.version}</warName>
+                   	<outputDirectory>${project.build.directory}/../../target</outputDirectory>
                 </configuration>
             </plugin>
             <plugin>
