Further pom configuration changes for deployment

--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -30,7 +30,7 @@
                 <version>2.1.1</version>
                 <configuration>
                     <warName>${project.artifactId}-${project.version}</warName>
-                    <outputDirectory>${project.build.directory}/../../target</outputDirectory>
+                    <outputDirectory>${project.build.directory}/../../Server/target</outputDirectory>
 					<!-- <webResources>	
 			            <resource> -->
 			              	<!-- this is relative to the pom.xml directory -->
