--- a/Server/src/main/resources/dev_persistence.properties
+++ b/Server/src/main/resources/dev_persistence.properties
@@ -7,8 +7,8 @@ hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.hbm2ddl.auto=create
 
 #### LOCAL CONFIGURATION ####
-mongodb.host=localhost
-mongodb.port=27000
+mongodb.host=ds039411.mongolab.com
+mongodb.port=39411
 mongodb.database=insframe-db
-mongodb.username=
-mongodb.password=
+mongodb.username=admin
+mongodb.password=manK1nd1634;
