--- a/Server/src/main/resources/persistence.properties
+++ b/Server/src/main/resources/persistence.properties
@@ -7,8 +7,8 @@ hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.hbm2ddl.auto=create
 
 #### HEROKU CONFIGURATION ####
-mongodb.host=ds063630.mongolab.com
-mongodb.port=63630
-mongodb.database=heroku_app31665401
+mongodb.host=ds039411.mongolab.com
+mongodb.port=39411
+mongodb.database=insframe-db
 mongodb.username=admin
-mongodb.password=inspection-framework
+mongodb.password=manK1nd1634;
