Modifications in Security-Handling and File Uploading.

--- a/Server/src/main/resources/dev_persistence.properties
+++ b/Server/src/main/resources/dev_persistence.properties
@@ -1,14 +1,12 @@
-dataSource.driverClassName=org.hsqldb.jdbcDriver
-dataSource.url=jdbc:hsqldb:mem:test
-dataSource.username=sa
-dataSource.password=
-
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.hbm2ddl.auto=create
-
 #### LOCAL CONFIGURATION ####
 mongodb.host=localhost
 mongodb.port=27000
 mongodb.database=insframe-db
 mongodb.username=
 mongodb.password=
+
+#### SERVER ####
+server.protocol=http
+server.hostname=localhost
+server.contextPath=rest
+server.port=8080
