--- a/Server/src/main/resources/persistence.properties
+++ b/Server/src/main/resources/persistence.properties
@@ -12,3 +12,9 @@ mongodb.port=63630
 mongodb.database=heroku_app31665401
 mongodb.username=admin
 mongodb.password=inspection-framework
+
+#### SERVER ####
+server.protocol=https
+server.hostname=inspection-framework.herokuapp.com
+server.contextPath=
+server.port=80
