Fixed attachment url generation for Heroku server.

--- a/Server/src/main/resources/persistence.properties
+++ b/Server/src/main/resources/persistence.properties
@@ -14,7 +14,7 @@ mongodb.username=admin
 mongodb.password=inspection-framework
 
 #### SERVER ####
-server.protocol=https
+server.protocol=http
 server.hostname=inspection-framework.herokuapp.com
 server.contextPath=
 server.port=80
